# template-python-refresher

./: Makefile  README.md  pyproject.toml  solution.py
tests/: test_solution.py
